--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+<title>Welcome to my Website</title>
 </head>
 <body>
 
-<h1>This is a Heading</h1>
+<h1>Hello, this website is</h1>
 <h2>This is a Heading</h2>
 <p>This is a paragraph.</p>
 
