--- a/index.html
+++ b/index.html
@@ -1,13 +1,31 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 <title>Welcome to my Website</title>
+<style type="text/css">
+	.button {
+		color: white;
+		margin-left: 10px; 
+		padding: 20px;
+		border: solid 5px white;
+		}
+	.font {
+		color: white;
+		font: verdana;
+	}
+</style>
 </head>
-<body>
 
-<h1>Hello, this website is</h1>
-<h2>This is a Heading</h2>
-<p>This is a paragraph.</p>
-
+<body style="width: 1000px; margin: 20px 150px; background: black">
+	<h1 class="font">Hello, my name is Elia Victor</h1>
+	<h2 class="font">I'm from Semarang</h2>
+	<p class="font">I like watching NBA</p>
+	<img src="https://cdn.nba.net/nba-drupal-prod/2017-08/SEO-image-NBA-logoman.jpg" style="width: 900px; height:473px; padding: 20px;">
+	<hr>
+	<br>
+	<br>
+	<a href="http://www.nba.com/#/" class="button" style="background: #17408B">Visit NBA.com </a>
+	<a href="https://en.wikipedia.org/wiki/National_Basketball_Association" class="button" style="background: #C9082A">More info about NBA </a>
 </body>
 </html>
