--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 	}
 
 	btnLogin.onclick = function(){
-		var textLogin=" ";
+		var textLogin="a";
 		var username = document.getElementById("loginUser").value;
 		var password = document.getElementById("loginPass").value;
 			if (username == null || username == "") {
